public class ActorAnimName {
    public const string Idle = "Idle";
    public const string Idle_PlaySpeed = Idle + "_PlaySpeed";

    public const string Move = "Move";
    public const string Move_PlaySpeed = Move + "_PlaySpeed";

    public const string Follow = "Move";
    public const string Follow_PlaySpeed = Follow + "_PlaySpeed";

    public const string Attack = "Attack";
    public const string Attack_PlaySpeed = Attack + "_PlaySpeed";

    public const string Dead = "Dead";
    public const string Dead_PlaySpeed = Dead + "_PlaySpeed";

    public const string Skill_0 = "Skill_0";
    public const string Skill_0_PlaySpeed = Skill_0 + "_PlaySpeed";

    public const string Skill_1 = "Skill_1";
    public const string Skill_1_PlaySpeed = Skill_1 + "_PlaySpeed";

    public const string Skill_2 = "Skill_2";
    public const string Skill_2_PlaySpeed = Skill_2 + "_PlaySpeed";

    public const string Skill_3 = "Skill_3";
    public const string Skill_3_PlaySpeed = Skill_3 + "_PlaySpeed";
} 
